created main, rewards, task setup activities

--- a/c1hack/app/src/main/AndroidManifest.xml
+++ b/c1hack/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".TaskSetupActivity"></activity>
+        <activity android:name=".TaskSetupActivity" />
+        <activity android:name=".RewardsActivity"></activity>
     </application>
 
 </manifest>
