Account class created; transfer method still incomplete

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    compile 'com.reimaginebanking.api:nessie-android-sdk:1.0.4'
+    compile 'com.mashape.unirest:unirest-java:1.4.9'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
 }
