--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,22 +9,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-        </activity>
+        <activity android:name=".MainActivity"></activity>
         <activity android:name=".TaskSetupActivity" />
         <activity android:name=".RewardsActivity" />
-        <activity android:name=".TaskActivity"></activity>
-        <activity android:name=".ChildActivity">
-        </activity>
+        <activity android:name=".TaskActivity" />
+        <activity android:name=".ChildActivity"></activity>
         <activity android:name=".WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Child_List">
-        </activity>
-
+        <activity android:name=".Child_List"></activity>
+        <activity android:name=".ChildAccountActivity"></activity>
     </application>
 
 </manifest>
